<resources>
    <string name="app_name">MVVM</string>
    <string name="email">Email id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">World Corona Status</string>
    <string name="menu_indian_corona">India Corona Status</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_setting">Setting</string>

    <string name="total_cases">Total Cases: </string>
    <string name="total_recovered">Total Recovered: </string>
    <string name="total_unresolved">Total Unresolved: </string>
    <string name="total_deaths">Total Deaths: </string>
    <string name="total_new_cases_today">Total New Cases Today: </string>
    <string name="total_new_deaths_today">Total New Deaths Today: </string>
    <string name="total_active_cases">Total Active Cases: </string>
    <string name="total_serious_cases">Total Serious Cases: </string>
    <string name="total_affected_countries">Total Affected Country: </string>

    <string name="home_second">Home Second</string>
    <string name="date_wise">Date Wise</string>
    <string name="state_wise">State Wise</string>
    <string name="tested">Tested</string>
    <string name="date">Date:</string>
    <string name="daily_confirmed">Daily Confirmed :  </string>
    <string name="daily_deceased">Daily Deceased:</string>
    <string name="daily_recovered">Daily Recovered:</string>
    <string name="total_confirmed">Total Confirmed:</string>
    <string name="total_deceased">Total Deceased:</string>

    <string name="last_updated_time">last Updated Time:</string>
    <string name="active">Active:</string>
    <string name="confirmed">Confirmed:</string>
    <string name="deaths">Deaths:</string>
    <string name="recovered">Recovered:</string>
    <string name="state">State:</string>

    <string name="positive_cases_from_samples_reported">Positive Cases From Samples Reported</string>
    <string name="sample_reported_today">Sample Reported Today</string>
    <string name="tests_conducted_by_private_labs">Tests Conducted By Private Labs</string>
    <string name="total_individuals_tested">Total Individuals Tested</string>
    <string name="total_positive_cases">Total Positive Cases</string>
    <string name="total_samples_tested">Total Samples Tested</string>
    <string name="update_time_stamp">Date</string>
    <string name="registration">Registation</string>
    <string name="user_name">User Name</string>
    <string name="already_account">Already a member? Login</string>
    <string name="change_password">Change Password</string>

</resources>
