<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mvvm.module.home.view.WorldCoronaStatusFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_world_coron_status">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.mvvm.module.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_indian_corona"
        android:name="com.example.mvvm.module.indiacoronastatus.view.fragment.HomeIndiaCoronaFragment"
        android:label="@string/menu_indian_corona"
        tools:layout="@layout/fragment_home_india_corona" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.mvvm.module.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>